@@ -1,3 +1,5 @@
 AUX awesome-session 33 RMD160 68a828295285a5232603df6574fdffa2527fb183 SHA1 c30cf121e89f0fc7320b79ca3452c33ec516f38d SHA256 a76cca201d3f815658acfb54a9ff3737d263cae1f6cc3527a59b0f22aa01df1b
+DIST awesome-3.3-rc3.tar.bz2 251630 RMD160 549f7e56c9690366cbab0e8b7f815bb26cb0fc34 SHA1 472739032feafef20913b0bdabde9a64292ce40e SHA256 b7b5bc6a178a24916e33926d278e1d843d802538f66c735e4a42db60a7a178a7
+EBUILD awesome-3.3_rc3.ebuild 2218 RMD160 05819fd5d3677602d93018c3f8aca6ff5bd60cb6 SHA1 373927564aa26d85ebbb4c725bab3a6b0a70d7fb SHA256 baef03e3461a03944b8d4dee3d10ac29f684b531625a340a56621b66ded8935b
 EBUILD awesome-9999.ebuild 1967 RMD160 ea1ca9e8551f58a7fc81eacc89967d741acef239 SHA1 080161c2f4dd3c5d003eb45794c571910cedf8aa SHA256 b49b0c533144f8ce997b7b22761352980b25557ca10aac5b00a30e6251cd23af
-MISC ChangeLog 239 RMD160 7cc0f4d21e079d882974ec8a7443114d5033b306 SHA1 8f61265067bde4ba27eca35d3a6633fee74d7110 SHA256 393dc1253f629e36c0d2c28101665154c7021a32b6ec7aa20e49f9c2b093756f
+MISC ChangeLog 425 RMD160 fcbb285b49bef097a56221757cd56baf5f5b56cf SHA1 4305d409d2e9a9116324eded99cfc9d2f82427ef SHA256 0608a8e6d7752916aa1a9388f4fc1834ab4e92e3f378982e2461d1f41f918382
